Security_Groups/sg_creation.tf
resource "aws_security_group" "sg" {
  count = length(var.instances)
  name = "${local.common}-${var.instances[count.index]}-sg"
  vpc_id = data.aws_ssm_parameter.roboshop_vpc_id.value
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_security_group" "Application_sg" {
  name = "application_sg"
  vpc_id = data.aws_ssm_parameter.roboshop_vpc_id.value
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_security_group_rule" "allow_ssh" {
  count = length(local.private_instances)
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"

  security_group_id        = aws_security_group.sg[count.index + 1].id
  source_security_group_id = aws_security_group.sg[0].id
}

resource "aws_security_group_rule" "allow_ssh_for_bastion" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"

  security_group_id        = aws_security_group.sg[0].id
  cidr_blocks              = ["0.0.0.0/0"] 
}

resource "aws_security_group_rule" "catalogue_to_mongodb" {
  type                     = "ingress"
  from_port                = 27017
  to_port                  = 27017
  protocol                 = "tcp"

  security_group_id        = aws_security_group.sg[7].id 
  source_security_group_id = aws_security_group.Application_sg.id
}

resource "aws_security_group_rule" "catalogue_temp_to_mongodb" {
  type                     = "ingress"
  from_port                = 27017
  to_port                  = 27017
  protocol                 = "tcp"

  security_group_id        = aws_security_group.sg[7].id
  source_security_group_id = aws_security_group.Application_sg.id
}

resource "aws_security_group_rule" "bastion_to_catalogue_temp" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"

  security_group_id        = aws_security_group.Application_sg.id
  source_security_group_id = aws_security_group.sg[0].id
}
